# hingeswiper

./: LICENSE  README.md  android_connector.py  hinge_automator.py  main.py  pyproject.toml  shape_matcher.py
