[project]
name = "hingeswiper-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pure-python-adb>=0.3.0.dev0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pillow>=11.2.1",
    "opencv-python>=4.11.0.86",
    "matplotlib>=3.10.1",
]
